[package]
name = "af-read-api"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "^0.16.2", features = ["http-client"] }
serde = { version = "^1.0.152", features = ["derive"] }
tokio = { version = "^1.0", features = ["full"] }

anyhow.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
