[package]
name = "af-transaction-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
move-core-types.workspace = true
shared-crypto.workspace = true
sui.workspace = true
sui-keys.workspace = true
sui-types.workspace = true
sui-sdk.workspace = true

af-read-api = { path = "../af-read-api" }
